- Correction des éléments de la barre de navigation - Ajout d'un smooth scrolling en JavaScript

--- a/frontend/styles/buttons.css
+++ b/frontend/styles/buttons.css
@@ -7,7 +7,7 @@ li a {
 /* Met les boutons en haut à droite */
 .btn-group-1 {
   margin-top: 0;
-  margin-right: 0;
+  margin-right: 5px;
 }
 
 .btn-group-1 li {
@@ -46,7 +46,7 @@ li a {
 .btn-group-2 li {
   width: 140px;
   height: 25px;
-  float: right;
+  float: left;
   display: inline;
   background-color: #004e86;
   text-align: center;
