--- a/frontend/styles/buttons.css
+++ b/frontend/styles/buttons.css
@@ -4,12 +4,6 @@ li a {
   padding-bottom: 20px;
 }
 
-/* Met les boutons en haut à droite */
-.btn-group-1 {
-  margin-top: 0;
-  margin-right: 0;
-}
-
 .btn-group-1 li {
   width: 140px;
   height: 25px;
@@ -51,11 +45,13 @@ li a {
   background-color: #004e86;
   text-align: center;
   font-size: 16px;
-  padding: 10px;
+  padding: 5px 0px 5px 0px;
 }
 
 .btn-group-2 li a {
   color: inherit;
+  padding: 8px 0 8px 0;
+  margin-top: -5  px;
 }
 
 .btn-group-2 li:hover {
