--- a/frontend/styles/buttons.css
+++ b/frontend/styles/buttons.css
@@ -51,13 +51,13 @@ li a {
   background-color: #004e86;
   text-align: center;
   font-size: 16px;
-  padding: 5px 0px 5px 0px;
+  padding: 5px 0 5px 0;
 }
 
 .btn-group-2 li a {
   color: inherit;
   padding: 8px 0 8px 0;
-  margin-top: -5  px;
+  margin-top: -5px;
 }
 
 .btn-group-2 li:hover {
