--- a/styles/testify.css
+++ b/styles/testify.css
@@ -1,8 +1,12 @@
 @import 'buttons.css';
+@import 'form.css';
 
 /* Style par défault du texte */
 * {
   font-family: 'Lato', sans-serif;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html {
@@ -36,9 +40,11 @@ a {
   top: 0;
   display: flex;
   justify-content: space-between;
+  z-index: 1;
 }
 
 .header-nav > h1 {
+  margin-left: auto;
   margin-right: auto;
   color: inherit;
 }
@@ -57,6 +63,7 @@ a {
   align-items: center;
   justify-content: center;
   color: white;
+  z-index: 1;
 }
 
 /* Style pour les tableaux (à optimiser) */
@@ -88,16 +95,42 @@ section {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  border: solid #004570 1px;
-  border-bottom: none;
-  margin: 0 200px 0 200px;
-  padding: 40px 150px 40px 150px;
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 
-section div {
+.container {
+  width: 1170px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.col-6 {
+  position: relative;
+  width: 50%;
+  float: left;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+.bg-grey {
+  background-color: #f7f7f9;
+}
+
+hr.secsep {
+  border: 0;
+  height: 1px;
+  background-image: -webkit-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+  background-image: -moz-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+  background-image: -ms-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+  background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+}
+
+/*section div {
   padding-right: 120px;
   padding-left: 120px;
-}
+}*/
 
 /* Style pour le bas de page */
 footer {
