- Correction du parsing des vues - Ajout d'une page 404 quand le router échoue à trouver une route

--- a/views/connexion.html
+++ b/views/connexion.html
@@ -14,15 +14,15 @@ Connexion
     <div class="row">
       <form class="form" style="text-align: center">
         <div>
-          <label for="email">Email : </label>
-          <input type="email" class="form-field" name="email" id="email" placeholder="Ex: email@gmail.com">
+          <!--<label for="email">Email : </label>-->
+          <input type="email" class="form-field" name="email" id="email" placeholder="Votre email">
         </div>
 
         <br>
 
         <div>
-          <label for="password">Mot de passe : </label>
-          <input type="password" class="form-field" name="password" id="password">
+          <!--<label for="password">Mot de passe : </label>-->
+          <input type="password" class="form-field" name="password" id="password" placeholder="Mot de passe">
         </div>
 
         <br>
