--- a/styles/testify.css
+++ b/styles/testify.css
@@ -12,6 +12,7 @@
 html {
   height: 100%;
 }
+
 body {
   position: relative;
   min-height: 100%;
@@ -127,11 +128,6 @@ hr.secsep {
   background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
 }
 
-/*section div {
-  padding-right: 120px;
-  padding-left: 120px;
-}*/
-
 /* Style pour le bas de page */
 footer {
   display: flex;
@@ -149,4 +145,13 @@ footer {
 
 footer a {
   color: inherit;
+}
+
+.h-100 {
+  height: 100%;
+}
+
+.my-auto {
+  margin-top: auto;
+  margin-bottom: auto;
 }
