- Gestion de la connexion / deconnexion - Commencement du dashboard avec gestion dynamique du menu

--- a/views/base_home.html
+++ b/views/base_home.html
@@ -18,7 +18,7 @@
       <a href="/appsy_project">
         <img src="images/logo_testify.png" width="70px" height="70px" style="margin-left: 10px">
       </a>
-      <h1>Découvrir Testify</h1>
+      <h1>{% block navtitle %}{% endblock %}</h1>
       <ul class="btn-group-1">
         <li><a href="inscription">Inscription</a></li>
         <li><a href="connexion">Connexion</a></li>
