--- a/views/home/connexion.html
+++ b/views/home/connexion.html
@@ -4,6 +4,10 @@
 Connexion
 {% endblock %}
 
+{% block navtitle %}
+Connexion
+{% endblock %}
+
 {% block body %}
 
 <section>
@@ -14,14 +18,12 @@ Connexion
     <div class="row">
       <form class="form" style="text-align: center">
         <div>
-          <!--<label for="email">Email : </label>-->
           <input type="email" class="form-field" name="email" id="email" placeholder="Votre email">
         </div>
 
         <br>
 
         <div>
-          <!--<label for="password">Mot de passe : </label>-->
           <input type="password" class="form-field" name="password" id="password" placeholder="Mot de passe">
         </div>
 
