--- a/views/home/home.html
+++ b/views/home/home.html
@@ -4,6 +4,10 @@
 Accueil
 {% endblock %}
 
+{% block navtitle %}
+Découvrir Testify
+{% endblock %}
+
 {% block body %}
 
 <!--Boutons de la barre de navigation-->
