- Correction de la gestion de l'erreur 404 - Quelques petites corrections sur la page d'accueil

--- a/views/home/home.html
+++ b/views/home/home.html
@@ -15,6 +15,7 @@ Découvrir Testify
   <ul class="btn-group-2">
     <li><a href="#product">Notre produit</a></li>
     <li><a href="#offers">Nos offres</a></li>
+    <li><a href="#clients">Nos clients</a></li>
     <li><a href="#review">On en parle</a></li>
     <li><a href="#client">Infinite Measures</a></li>
   </ul>
@@ -77,7 +78,7 @@ Découvrir Testify
 </section>
 
 
-<section>
+<section id="clients">
   <div class="container">
     <div class="col-6">
       <img src="images/logo_appsy.png" height="250px">
