Commencement de la messagerie côté frontend

--- a/styles/form.css
+++ b/styles/form.css
@@ -21,6 +21,13 @@
   cursor: pointer;
 }
 
+a.btn {
+  -webkit-appearance: button;
+  -moz-appearance: button;
+  appearance: button;
+  text-decoration: none;
+}
+
 .btn-primary {
   background: #7f8ff4;
   color: #fff;
