--- a/views/base_home.html
+++ b/views/base_home.html
@@ -3,10 +3,10 @@
   <head>
     <title>Testify - {% block title %}{% endblock %}</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles/testify.css">
-    <link rel="stylesheet" href="vendor/noty/noty.css">
-    <link rel="stylesheet" href="vendor/noty/themes/metroui.css">
-    <link rel="stylesheet" href="vendor/fontawesome/all.min.css">
+    <link rel="stylesheet" href="/appsy_project/styles/testify.css">
+    <link rel="stylesheet" href="/appsy_project/vendor/noty/noty.css">
+    <link rel="stylesheet" href="/appsy_project/vendor/noty/themes/metroui.css">
+    <link rel="stylesheet" href="/appsy_project/vendor/fontawesome/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato&display=swap">
 
     {% block styles %}
@@ -16,7 +16,7 @@
 
     <nav class="header-nav">
       <a href="/appsy_project">
-        <img src="images/logo_testify.png" width="70px" height="70px" style="margin-left: 10px">
+        <img src="/appsy_project/images/logo_testify.png" width="70px" height="70px" style="margin-left: 10px">
       </a>
       <h1>{% block navtitle %}{% endblock %}</h1>
       <ul class="btn-group-1">
@@ -34,10 +34,10 @@
       </p>
     </footer>
 
-    <script type="text/javascript" src="vendor/jquery/jquery-3.4.1.min.js" ></script>
-    <script type="text/javascript" src="vendor/noty/noty.min.js" ></script>
-    <script type="text/javascript" src="scripts/main.js" ></script>
-    <script type="text/javascript" src="scripts/scrolling.js" ></script>
+    <script type="text/javascript" src="/appsy_project/vendor/jquery/jquery-3.4.1.min.js" ></script>
+    <script type="text/javascript" src="/appsy_project/vendor/noty/noty.min.js" ></script>
+    <script type="text/javascript" src="/appsy_project/scripts/main.js" ></script>
+    <script type="text/javascript" src="/appsy_project/scripts/scrolling.js" ></script>
 
     {% block scripts %}
     {% endblock %}
