--- a/views/home/home.html
+++ b/views/home/home.html
@@ -26,7 +26,7 @@ Découvrir Testify
 <section id="product">
   <div class="container">
     <div class="col-6">
-      <img src="images/logo_testify.png" width="300px">
+      <img src="/appsy_project/images/logo_testify.png" width="300px">
     </div>
     <div class="col-6">
       <h3>Testify</h3>
@@ -81,7 +81,7 @@ Découvrir Testify
 <section id="clients">
   <div class="container">
     <div class="col-6">
-      <img src="images/logo_appsy.png" height="250px">
+      <img src="/appsy_project/images/logo_appsy.png" height="250px">
     </div>
     <div class="col-6">
       <h3>Nos clients</h3>
@@ -113,7 +113,7 @@ Découvrir Testify
       </p>
     </div>
     <div class="col-6">
-      <img src="images/logo_appsy.png" height="250px">
+      <img src="/appsy_project/images/logo_appsy.png" height="250px">
     </div>
   </div>
 </section>
@@ -122,7 +122,7 @@ Découvrir Testify
 <section id="client">
   <div class="container">
     <div class="col-6">
-      <img src="images/Infinite_measures.png" height="250px">
+      <img src="/appsy_project/images/Infinite_measures.png" height="250px">
     </div>
     <div class="col-6">
       <h3>Infinite Measures</h3>
