--- a/views/404.html
+++ b/views/404.html
@@ -3,8 +3,8 @@
   <head>
     <title>Testify - Page introuvable</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles/testify.css">
-    <link rel="stylesheet" href="vendor/fontawesome/all.min.css">
+    <link rel="stylesheet" href="/appsy_project/styles/testify.css">
+    <link rel="stylesheet" href="/appsy_project/vendor/fontawesome/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato&display=swap">
   </head>
   <body class="h-100">
