--- a/views/dashboard/chat_user.html
+++ b/views/dashboard/chat_user.html
@@ -13,19 +13,22 @@ Discussion
 <section>
   <div class="container">
     <div class="row">
-      <h2 style="text-align: center">Discussion - XXXX XXXX</h2>
+      <h2 style="text-align: center">Discussion - <span id="contact"></span></h2>
+    </div>
+    <div class="row" id="messages-wait" style="text-align: center">
+      <i class="fas fa-circle-notch fa-spin fa-2x"></i>
+    </div>
+    <div class="row" id="nomessage" style="display: none">
+      <h3 style="text-align: center">Vous n'avez pas encore de conversation !</h3>
     </div>
     <div class="row" id="messages">
-      <div class="message msgMe">
-        <h6><b>O'connel Alice</b></h6>
-        <p>Yep ca va merci ;-)</p>
-        <small>2019-11-05 11:32:00</small>
-      </div>
-      <div class="message msgOthers">
-        <h6><b>John Doe</b></h6>
-        <p>Ok super !</p>
-        <small>2019-11-05 11:35:00</small>
-      </div>
+    </div>
+
+    <div class="row msgZone">
+      <textarea id="text-message" placeholder="Message"></textarea>
+      <button type="button" class="btn btn-primary" id="btn-send-message">
+        Envoyer <i id="wait-send-message" class="fas fa-circle-notch fa-spin" style="display: none"></i>
+      </button>
     </div>
   </div>
 </section>
@@ -36,7 +39,20 @@ Discussion
 
 <script type="text/javascript">
   $(function() {
+    var url = new URL(window.location.href);
+    var contact_id = url.searchParams.get('id');
 
+    function getMessages() {
+      getUserContactMessages(contact_id);
+
+      setTimeout(getMessages, 10000);
+    }
+
+    getMessages();
+
+    $('#btn-send-message').on('click', function() {
+      sendMessageTo(contact_id, $('#text-message').val());
+    });
   });
 </script>
 
