--- a/views/home/connexion.html
+++ b/views/home/connexion.html
@@ -12,11 +12,11 @@ Connexion
 
 <section>
   <div class="container">
-    <div class="row">
-      <h2 style="text-align: center">Connexion</h2>
+    <div class="row text-center">
+      <h2>Connexion</h2>
     </div>
     <div class="row">
-      <form class="form" style="text-align: center">
+      <form class="form text-center">
         <div>
           <input type="email" class="form-field" name="email" id="email" placeholder="Votre email">
         </div>
