--- a/views/home/inscription.html
+++ b/views/home/inscription.html
@@ -12,24 +12,24 @@ Inscription
 
 <section>
   <div class="container">
-    <div class="row">
-      <h2 style="text-align: center">Inscription</h2>
+    <div class="row text-center">
+      <h2>Inscription</h2>
     </div>
-    <div class="row">
-      <form>
+    <div class="row text-center">
+      <form class="form">
 
         <div>
           <label for="nom">Nom : </label>
-          <input type="text" name="nom" id="nom" placeholder="Nom">
+          <input class="form-field" type="text" name="nom" id="nom" placeholder="Nom">
           <label for="prenom">Prénom : </label>
-          <input type="text" name="prenom" id="prenom" placeholder="Prénom">
+          <input class="form-field" type="text" name="prenom" id="prenom" placeholder="Prénom">
         </div>
 
         <div>
           <label for="email">Email : </label>
-          <input type="email" name="email" id="email" placeholder="Ex: email@gmail.com">
+          <input class="form-field" type="email" name="email" id="email" placeholder="Ex: email@gmail.com">
           <label for="tel">Téléphone : </label>
-          <input type="tel" name="tel" id="tel" placeholder="06********">
+          <input class="form-field" type="tel" name="tel" id="tel" placeholder="06********">
         </div>
 
         <div>
@@ -53,11 +53,11 @@ Inscription
 
         <div>
           <label for="pass">Choisissez un mot de passe : </label>
-          <input type="password" name="pass" id="pass" placeholder="Maj, nb caracteres, etc.">
+          <input class="form-field" type="password" name="pass" id="pass" placeholder="Maj, nb caracteres, etc.">
         </div>
         <div>
           <label for="pass">Confirmation du mot de passe : </label>
-          <input type="password" name="pass" id="pass" placeholder="Maj, nb caracteres, etc.">
+          <input  class="form-field" type="password" name="pass" id="pass" placeholder="Maj, nb caracteres, etc.">
         </div>
 
 
