--- a/views/dashboard/chat_user.html
+++ b/views/dashboard/chat_user.html
@@ -12,14 +12,14 @@ Discussion
 
 <section>
   <div class="container">
-    <div class="row">
-      <h2 style="text-align: center">Discussion - <span id="contact"></span></h2>
+    <div class="row text-center">
+      <h2>Discussion - <span id="contact"></span></h2>
     </div>
-    <div class="row" id="messages-wait" style="text-align: center">
+    <div class="row text-center" id="messages-wait">
       <i class="fas fa-circle-notch fa-spin fa-2x"></i>
     </div>
-    <div class="row" id="nomessage" style="display: none">
-      <h3 style="text-align: center">Vous n'avez pas encore de conversation !</h3>
+    <div class="row text-center" id="nomessage" style="display: none">
+      <h3>Vous n'avez pas encore de conversation !</h3>
     </div>
     <div class="row" id="messages">
     </div>
