--- a/views/dashboard/home.html
+++ b/views/dashboard/home.html
@@ -12,8 +12,8 @@ Accueil
 
 <section>
   <div class="container">
-    <div class="row">
-      <h2 style="text-align: center">Dashboard</h2>
+    <div class="row text-center">
+      <h2>Dashboard</h2>
     </div>
   </div>
 </section>
