--- a/styles/testify_dashboard.css
+++ b/styles/testify_dashboard.css
@@ -144,6 +144,11 @@ footer p {
   margin-bottom: auto;
 }
 
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .text-center {
   text-align: center;
 }
