- Continuation du CSS - Ajout d'un menu Forums - Les icons du menu sont colorés quand on est sur la page correspondante

--- a/styles/form.css
+++ b/styles/form.css
@@ -28,6 +28,8 @@ a.btn {
   text-decoration: none;
 }
 
+/* Primary button */
+
 .btn-primary {
   background: #7f8ff4;
   color: #fff;
@@ -36,24 +38,64 @@ a.btn {
   padding: 12px 36px;
 }
 
-.btn-primary:disabled, .btn-primary.disabled {
-  background: #6875c8;
-  opacity: .65;
+.btn-primary:disabled,
+.btn-primary.disabled {
+  opacity: 0.65;
 }
 
-.btn-primary:disabled:hover, .btn-primary.disabled:hover {
-  background: #6875c8 !important;
-}
-
-.btn-primary:disabled:active, .btn-primary.disabled:active {
-  background: #6875c8 !important;
-}
-
-.btn-primary:hover {
+.btn-primary:hover:not(:disabled):not(.disabled) {
   background: #717fdb;
 }
 
-.btn-primary:active {
+.btn-primary:active:not(:disabled):not(.disabled) {
   background: #7f8ff4;
+  box-shadow: inset 0 0 10px 2px rgba(0, 0, 0, 0.2);
+}
+
+/* Success button */
+
+.btn-success {
+  background: #28a745;
+  color: #fff;
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
+  border-radius: 2px;
+  padding: 12px 36px;
+}
+
+.btn-success:disabled,
+.btn-success.disabled {
+  opacity: 0.65;
+}
+
+.btn-success:hover:not(:disabled):not(.disabled) {
+  background: #23943d;
+}
+
+.btn-success:active:not(:disabled):not(.disabled) {
+  background: #28a745;
+  box-shadow: inset 0 0 10px 2px rgba(0, 0, 0, 0.2);
+}
+
+/* Danger button */
+
+.btn-danger {
+  background: #dc3545;
+  color: #fff;
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
+  border-radius: 2px;
+  padding: 12px 36px;
+}
+
+.btn-danger:disabled,
+.btn-danger.disabled {
+  opacity: 0.65;
+}
+
+.btn-danger:hover:not(:disabled):not(.disabled) {
+  background: #c12f3d;
+}
+
+.btn-danger:active:not(:disabled):not(.disabled) {
+  background: #dc3545;
   box-shadow: inset 0 0 10px 2px rgba(0, 0, 0, 0.2);
 }
