--- a/views/base_dashboard.html
+++ b/views/base_dashboard.html
@@ -51,8 +51,14 @@
         </div>
 
         <div class="nav-element nav-bottom" id="chat-nav">
-          <a href="/appsy_project/dashboard/chat">
+          <a href="/appsy_project/dashboard/forum">
             <i class="fas fa-comments"></i>
+            Forums
+          </a>
+        </div>
+        <div class="nav-element" id="chat-nav">
+          <a href="/appsy_project/dashboard/chat">
+            <i class="fas fa-comment-dots"></i>
             Messagerie
           </a>
         </div>
