Continuation de la partie Forum

--- a/views/dashboard/forums.html
+++ b/views/dashboard/forums.html
@@ -19,7 +19,7 @@ Forums
       <i class="fas fa-circle-notch fa-spin fa-2x"></i>
     </div>
     <div class="row text-center" id="noforums" style="display: none">
-      <h3>Il n'y a pas encore de forum disponibles !</h3>
+      <h3>Il n'y a pas encore de forum disponible !</h3>
     </div>
     <div class="row" id="forums">
     </div>
@@ -32,7 +32,7 @@ Forums
 
 <script type="text/javascript">
   $(function() {
-
+    getCategories();
   });
 </script>
 
